--- a/src/html/06_shopping.html
+++ b/src/html/06_shopping.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +18,7 @@
   <meta content="telephone=no, address=no" name="format-detection">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  
+
   <link rel="stylesheet" href="../css/main_linye.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -27,130 +28,152 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
   <header class="comm-header">
-        <div class="midd_header clearfix">
-          <div class="index_icon">
-            <a href="index.html"></a>
-          </div>
-          <ul class="nav clearfix">
-            <li class="active">
-              <a href="#">课程中心</a>
-            </li>
-            <li>
-              <a href="#">我的班级</a>
-            </li>
-            <li>
-              <a href="#">排行榜</a>
-            </li>
-            <li>
-              <a href="#">学币商城</a>
-            </li>
-          </ul>
-          <div class="login">
-            <a href="#">个人中心</a>
-          </div>
-        </div>
-      </header>
-    
+    <div class="midd_header clearfix">
+      <div class="index_icon">
+        <a href="index.html"></a>
+      </div>
+      <ul class="nav clearfix">
+        <li class="active">
+          <a href="#">课程中心</a>
+        </li>
+        <li>
+          <a href="#">我的班级</a>
+        </li>
+        <li>
+          <a href="#">排行榜</a>
+        </li>
+        <li>
+          <a href="#">学币商城</a>
+        </li>
+      </ul>
+      <div class="login">
+        <a href="#">个人中心</a>
+      </div>
+    </div>
+  </header>
+
   <div class="wrap">
     <div class="main">
       <div class="linye-body">
         <div class="my-detail">
-            <img class="user-face" src="../img/05/50.png" alt="">
-            <img class="rectangle" src="../img/06/rectangle2x.png" alt="">
-            <p class="my-money">我的学币：<span>66666</span></p>
-            <p class="money-record">学币获取记录</p>
-            <div class="line1"></div>
-            <p class="money-record">消费记录</p>
+          <img class="user-face" src="../img/05/50.png" alt="">
+          <img class="rectangle" src="../img/06/rectangle2x.png" alt="">
+          <p class="my-money">我的学币：
+            <span>66666</span>
+          </p>
+          <p class="money-record">学币获取记录</p>
+          <div class="line1"></div>
+          <p class="money-record">消费记录</p>
         </div>
-         <div class="shop-body">
-             <ul class="goods-list">
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num goods-num-none">库存 999</div>
-                 </li>
-                 <li class="goods-item">
-                     <img class="goods-img" src="../img/06/group42x.png" alt="">
-                     <div class="goods-name">商品名称</div>
-                     <div class="goods-bottom">
-                         <div class="goods-price">1200金币</div>
-                         <button class="buy-btn">兑换</button>
-                     </div>
-                     <div class="goods-num">库存 999</div>
-                 </li>
-             </ul>
-            <div class="change-page">
-             <div class="page-list">
-                <button class="last-page-btn"><img src="../img/06/group52x.png" alt=""></button>
-                <div class="page-item page-selectd">1</div>
-                <div class="page-item">2</div>
-                <div class="page-item">3</div>
-                <div class="page-item">4</div>
-                <div class="page-item">5</div>
-                <div class="page-item">6</div>
-                <button class="last-page-btn"><img src="../img/06/group72x.png" alt=""></button>
-             </div>
-             <p>共30页</p>
-             <p>到第</p>
-             <input class="page-input" type="number">
-             <p>页</p>
-             <button class="page-btn">确定</button>
-            </div>     
-         </div>
+        <div class="shop-body">
+          <ul class="goods-list">
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num goods-num-none">库存 999</div>
+            </li>
+            <li class="goods-item">
+              <img class="goods-img" src="../img/06/group42x.png" alt="">
+              <div class="goods-name">商品名称</div>
+              <div class="goods-bottom">
+                <div class="goods-price">1200金币</div>
+                <button class="buy-btn">兑换</button>
+              </div>
+              <div class="goods-num">库存 999</div>
+            </li>
+          </ul>
+          <div class="change-page">
+            <div class="page-list">
+              <button class="last-page-btn">
+                <img src="../img/06/group52x.png" alt="">
+              </button>
+              <div class="page-item page-selectd">1</div>
+              <div class="page-item">2</div>
+              <div class="page-item">3</div>
+              <div class="page-item">4</div>
+              <div class="page-item">5</div>
+              <div class="page-item">6</div>
+              <button class="last-page-btn">
+                <img src="../img/06/group72x.png" alt="">
+              </button>
+            </div>
+            <p>共30页</p>
+            <p>到第</p>
+            <input class="page-input" type="number">
+            <p>页</p>
+            <button class="page-btn">确定</button>
+          </div>
+        </div>
       </div>
-      
+
     </div>
   </div>
-  
+  <!-- build:foot -->
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_linye.js"></script>
 </body>
