--- a/src/html/08_change_password.html
+++ b/src/html/08_change_password.html
@@ -2,33 +2,33 @@
 <html>
 
 <head>
-    <meta content="webkit" name="renderer" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="UTF-8">
-    <!-- 第0步： 
+  <meta content="webkit" name="renderer" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <!-- 第0步： 
     每个页面的Title改下 -->
-    <title>修改密码</title>
-    <meta name="Keywords" content="">
-    <meta name="Description" content="">
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
-    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
-    <meta content="no-cache" http-equiv="pragma">
-    <meta content="0" http-equiv="expires">
-    <meta content="telephone=no, address=no" name="format-detection">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <title>修改密码</title>
+  <meta name="Keywords" content="">
+  <meta name="Description" content="">
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+  <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+  <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
+  <meta content="no-cache" http-equiv="pragma">
+  <meta content="0" http-equiv="expires">
+  <meta content="telephone=no, address=no" name="format-detection">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="../css/main_linye.css">
-    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main_linye.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="linye-change-password">
-    <!--[if lte IE 9]>
+  <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-   <!-- build:head -->
-   
+  <!-- build:head -->
+  
   <header class="comm-header">
     <div class="midd_header clearfix">
       <div class="index_icon">
@@ -54,74 +54,92 @@
     </div>
   </header>
 
-   <!-- endbuild -->
+  <!-- endbuild -->
 
-    <div class="wrap">
-        <div class="main">
-            <div class="linye-body">
-                <p class="data-title">
-                    个人中心／
-                    <span>个人资料</span>
-                </p>
-                <div class="body-title">修改密码</div>
-                <div class="content">
-                    <div class="progress">
-                        <!-- 类名progress-item-ing正在执行的步骤 -->
-                        <!-- 类名progress-item-finish已经完成步骤的状态 -->
-                        <!-- 类名progress-item-ing已经完成进度条的状态 -->
-                        <!-- 类名progress-name-finish已经完成和正在进行的步骤名字的状态 -->
-                        <div class="progress-top">
-                            <div class="progress-item progress-item-ing">
-                                1
-                                <div class="progress-name progress-name-finish">发送验证码</div>
-                            </div>
-                            <div class="progress-line1"></div>
-                            <div class="progress-item">
-                                2
-                                <div class="progress-name middle">验证手机</div>
-                            </div>
-                            <div class="progress-line1"></div>
-                            <div class="progress-item">
-                                3
-                                <div class="progress-name">设置新密码</div>
-                            </div>
-                        </div>
-                      
-                    </div>
-                    <div class="btn-list">
-                        <input class="putin" type="number" name="" id="" placeholder="请输入您的手机号"><br>
-                        <button class="send-btn">发送验证码到手机</button>
-                    </div>
-                    <!-- 填写验证码输入框 -->
-                    <!-- <div class="btn-list">
+
+  <div class="wrap">
+    <div class="main">
+      <div class="linye-body">
+        <p class="data-title">
+          个人中心／
+          <span>个人资料</span>
+        </p>
+        <div class="body-title">修改密码</div>
+        <div class="content">
+          <div class="progress">
+            <!-- 类名progress-item-ing正在执行的步骤 -->
+            <!-- 类名progress-item-finish已经完成步骤的状态 -->
+            <!-- 类名progress-item-ing已经完成进度条的状态 -->
+            <!-- 类名progress-name-finish已经完成和正在进行的步骤名字的状态 -->
+            <div class="progress-top">
+              <div class="progress-item progress-item-ing">
+                1
+                <div class="progress-name progress-name-finish">发送验证码</div>
+              </div>
+              <div class="progress-line1"></div>
+              <div class="progress-item">
+                2
+                <div class="progress-name middle">验证手机</div>
+              </div>
+              <div class="progress-line1"></div>
+              <div class="progress-item">
+                3
+                <div class="progress-name">设置新密码</div>
+              </div>
+            </div>
+
+          </div>
+          <div class="btn-list">
+            <input class="putin" type="number" name="" id="" placeholder="请输入您的手机号">
+            <br>
+            <button class="send-btn">发送验证码到手机</button>
+          </div>
+          <!-- 填写验证码输入框 -->
+          <!-- <div class="btn-list">
                         <input class="putin" type="number" name="" id="" placeholder="请输入收到的验证码"><br>
                         <button class="send-btn">验证</button>
                     </div> -->
-                    <!-- 设置新密码 -->
-                    <!-- <div class="btn-list">
+          <!-- 设置新密码 -->
+          <!-- <div class="btn-list">
                         <input class="putin" type="number" name="" id="" placeholder="请设置新密码"><br>
                         <input class="putin2" type="number" name="" id="" placeholder="请重复新密码"><br>
                         <button class="send-btn">验证</button>
                     </div> -->
-                    <!-- 输入手机号提示 -->
-                    <div class="content-text">
-                        <p class="old-phone">旧手机号无法使用？</p>
-                        <p class="tip1">如果您的旧手机无法使用，请联系您的班主任，并告诉您的班主任您的新手机号，班主任会帮您改绑手机。</p>
-                    </div>
-                    <!-- 输入验证码和重置密码提示-->
-                    <!-- <div class="content-text">
+          <!-- 输入手机号提示 -->
+          <div class="content-text">
+            <p class="old-phone">旧手机号无法使用？</p>
+            <p class="tip1">如果您的旧手机无法使用，请联系您的班主任，并告诉您的班主任您的新手机号，班主任会帮您改绑手机。</p>
+          </div>
+          <!-- 输入验证码和重置密码提示-->
+          <!-- <div class="content-text">
                         <p class="old-phone"><span>!</span>错误提示</p>
                         
                     </div> -->
-                </div>
-            </div>
         </div>
-
+      </div>
     </div>
-    </div>
 
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/main_linye.js"></script>
+  </div>
+  </div>
+  <!-- build:foot -->
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+      </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+    </div>
+  </div>
+  <!-- endbuild -->
+
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_linye.js"></script>
 </body>
 
 </html>
