--- a/src/html/25_read_setence.html
+++ b/src/html/25_read_setence.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="body-readsetene">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -51,6 +53,7 @@
 
   <!-- endbuild -->
 
+
   <div class="wrap">
     <div class="main">
       <p class="page-title">
@@ -62,9 +65,15 @@
         <div class="summary-wp clearfix">
           <img src="../img/clock_icon.png" alt="" class="clock-img">
           <div class="time-wp">
-            <p class="time-txt">在线时长<span class="txt">02:00</span></p>
-            <p class="time-txt">学习时长<span class="txt">02:00</span></p>
-            <p class="time-txt">时间效率<span class="txt">50%</span></p>
+            <p class="time-txt">在线时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">学习时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">时间效率
+              <span class="txt">50%</span>
+            </p>
           </div>
         </div>
         <div class="practice-main">
@@ -81,7 +90,8 @@
                 <input class="en-ipt" type="text">
                 <!-- 如果填写正确 给重置按钮加none类名 给result-icon加success类名 给correct-txt加success-txt类名-->
                 <!-- 如果填写错误 给重置按钮加none类名 给result-icon加fail类名-->
-                <a href="javascript:;" class="reset-btn none"><i class="reset-icon"></i>重置</a>
+                <a href="javascript:;" class="reset-btn none">
+                  <i class="reset-icon"></i>重置</a>
                 <i class="result-icon fail"></i>
                 <p class="correct-txt success-txt">How are you?</p>
               </div>
@@ -119,22 +129,23 @@
       </div>
     </div>
   </div>
-   <!-- build:foot -->
-    <!-- 底部 -->
-    <div class="footer">
-      <div class="footer-ct">
-        <div class="tel-wp">
-          <img src="../img/logo.png" alt="" class="logo">
-          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
-        </div>
-        <p class="ads-wp">
-          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
-          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
-        </p>
-        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+  <!-- build:foot -->
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
       </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
-    <!-- endbuild -->
+  </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
 </body>
