--- a/src/html/34_senior_exam.html
+++ b/src/html/34_senior_exam.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="body-synchrotest">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -51,6 +53,7 @@
 
   <!-- endbuild -->
 
+
   <div class="wrap">
     <div class="main">
       <p class="page-title">
@@ -59,7 +62,8 @@
       </p>
       <div class="synchrotest-box clearfix">
         <span class="unit">真题测试-中考冲刺</span>
-        <a href="javascript:;" class="changecourse"><i class="change-icon"></i>更换</a>
+        <a href="javascript:;" class="changecourse">
+          <i class="change-icon"></i>更换</a>
         <a href="javascript:;" class="return-coursecenter">返回课程中心</a>
       </div>
       <div class="synchrotest-wp">
@@ -68,26 +72,42 @@
           <li>
             <span class="unit-txt">单元XXX卷 易</span>
             <span class="pass">已通过</span>
-            <span class="history-fa"><a href="javascript:;" class="history">答题历史</a></span>
-            <span class="answer-fa"><a href="javascript:;" class="answer-again">再次答题</a></span>
+            <span class="history-fa">
+              <a href="javascript:;" class="history">答题历史</a>
+            </span>
+            <span class="answer-fa">
+              <a href="javascript:;" class="answer-again">再次答题</a>
+            </span>
           </li>
           <li>
             <span class="unit-txt">单元XXX卷 中</span>
             <span class="pass">已通过</span>
-            <span class="history-fa"><a href="javascript:;" class="history">答题历史</a></span>
-            <span class="answer-fa"><a href="javascript:;" class="answer-again">再次答题</a></span>
+            <span class="history-fa">
+              <a href="javascript:;" class="history">答题历史</a>
+            </span>
+            <span class="answer-fa">
+              <a href="javascript:;" class="answer-again">再次答题</a>
+            </span>
           </li>
           <li>
             <span class="unit-txt">单元XXX卷 难</span>
             <span class="notpass">未通过</span>
-            <span class="history-fa"><a href="javascript:;" class="history">答题历史</a></span>
-            <span class="answer-fa"><a href="javascript:;" class="answer-again">再次答题</a></span>
+            <span class="history-fa">
+              <a href="javascript:;" class="history">答题历史</a>
+            </span>
+            <span class="answer-fa">
+              <a href="javascript:;" class="answer-again">再次答题</a>
+            </span>
           </li>
           <li>
             <span class="unit-txt">单元XXX卷 难</span>
             <span class="notpass">未通过</span>
-            <span class="history-fa"><a href="javascript:;" class="history">答题历史</a></span>
-            <span class="answer-fa"><a href="javascript:;" class="answer-again">再次答题</a></span>
+            <span class="history-fa">
+              <a href="javascript:;" class="history">答题历史</a>
+            </span>
+            <span class="answer-fa">
+              <a href="javascript:;" class="answer-again">再次答题</a>
+            </span>
           </li>
         </ul>
       </div>
@@ -105,22 +125,23 @@
       </div>
     </div>
   </div>
-   <!-- build:foot -->
-    <!-- 底部 -->
-    <div class="footer">
-      <div class="footer-ct">
-        <div class="tel-wp">
-          <img src="../img/logo.png" alt="" class="logo">
-          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
-        </div>
-        <p class="ads-wp">
-          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
-          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
-        </p>
-        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+  <!-- build:foot -->
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
       </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
-    <!-- endbuild -->
+  </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
 </body>
