--- a/src/html/12_course.html
+++ b/src/html/12_course.html
@@ -519,6 +519,7 @@
       </div>
     </div>
   </div>
+  <!-- build:foot -->
   <!-- 底部 -->
   <div class="footer">
     <div class="footer-ct">
@@ -533,6 +534,8 @@
       <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
   </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
