--- a/src/html/21_oralpractice.html
+++ b/src/html/21_oralpractice.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="body-oralpractice">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -51,6 +53,7 @@
 
   <!-- endbuild -->
 
+
   <div class="wrap">
     <div class="main">
       <p class="page-title">
@@ -62,9 +65,15 @@
         <div class="summary-wp clearfix">
           <img src="../img/clock_icon.png" alt="" class="clock-img">
           <div class="time-wp">
-            <p class="time-txt">在线时长<span class="txt">02:00</span></p>
-            <p class="time-txt">学习时长<span class="txt">02:00</span></p>
-            <p class="time-txt">时间效率<span class="txt">50%</span></p>
+            <p class="time-txt">在线时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">学习时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">时间效率
+              <span class="txt">50%</span>
+            </p>
           </div>
         </div>
         <div class="practice-main">
@@ -79,9 +88,12 @@
               <div class="word-left">
                 <p class="word">word</p>
                 <p class="word-cue">[wɜ:d]</p>
-                <p class="word-txt"><span class="word-list">n.</span>单词；话语；诺言；消息；</p>
-                <p class="word-txt"><span class="word-list">vt.</span>措辞，用词；用言语表达；</p>
-                <p class="word-txt"><span class="word-list">vi.</span>讲话；</p>
+                <p class="word-txt">
+                  <span class="word-list">n.</span>单词；话语；诺言；消息；</p>
+                <p class="word-txt">
+                  <span class="word-list">vt.</span>措辞，用词；用言语表达；</p>
+                <p class="word-txt">
+                  <span class="word-list">vi.</span>讲话；</p>
               </div>
               <div class="opearte-right">
                 <div class="img-wp">
@@ -103,7 +115,8 @@
                     <img src="../img/result2_icon.png" alt="" class="soundresult-img none">
                     <img src="../img/result3_icon.png" alt="" class="soundresult-img none">
                     <div class="spundresult-txtwp">
-                      <p class="sound-score"><span class="score">98</span>分</p>
+                      <p class="sound-score">
+                        <span class="score">98</span>分</p>
                       <p class="soundresult-txt">excellent! 你读得太棒了！</p>
                     </div>
                   </div>
@@ -152,22 +165,23 @@
         </div>
       </div>
     </div>
-     <!-- build:foot -->
+    <!-- build:foot -->
     <!-- 底部 -->
-    <div class="footer">
-      <div class="footer-ct">
-        <div class="tel-wp">
-          <img src="../img/logo.png" alt="" class="logo">
-          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
-        </div>
-        <p class="ads-wp">
-          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
-          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
-        </p>
-        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
       </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
+  </div>
     <!-- endbuild -->
+
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
