--- a/src/html/26_oraltraining.html
+++ b/src/html/26_oraltraining.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="body-oralpractice">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -51,6 +53,7 @@
 
   <!-- endbuild -->
 
+
   <div class="wrap">
     <div class="main">
       <p class="page-title">
@@ -62,9 +65,15 @@
         <div class="summary-wp clearfix">
           <img src="../img/clock_icon.png" alt="" class="clock-img">
           <div class="time-wp">
-            <p class="time-txt">在线时长<span class="txt">02:00</span></p>
-            <p class="time-txt">学习时长<span class="txt">02:00</span></p>
-            <p class="time-txt">时间效率<span class="txt">50%</span></p>
+            <p class="time-txt">在线时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">学习时长
+              <span class="txt">02:00</span>
+            </p>
+            <p class="time-txt">时间效率
+              <span class="txt">50%</span>
+            </p>
           </div>
         </div>
         <div class="practice-main">
@@ -79,8 +88,8 @@
               <div class="oraltraining-left">
                 <p class="oral-txt-en">How are you？</p>
                 <p class="oral-txt-cn">你好吗？</p>
-                 <!-- 录音 start -->
-                 <div class="sound-recod none">
+                <!-- 录音 start -->
+                <div class="sound-recod none">
                   <img src="../img/sound_recod.png" alt="" class="soundrecord-img">
                   <span class="soundrecord-txt">录音中…</span>
                 </div>
@@ -97,7 +106,8 @@
                   <img src="../img/result2_icon.png" alt="" class="soundresult-img none">
                   <img src="../img/result3_icon.png" alt="" class="soundresult-img none">
                   <div class="spundresult-txtwp">
-                    <p class="sound-score"><span class="score">98</span>分</p>
+                    <p class="sound-score">
+                      <span class="score">98</span>分</p>
                     <p class="soundresult-txt">excellent! 你读得太棒了！</p>
                   </div>
                 </div>
@@ -149,22 +159,23 @@
       </div>
     </div>
   </div>
-   <!-- build:foot -->
-    <!-- 底部 -->
-    <div class="footer">
-      <div class="footer-ct">
-        <div class="tel-wp">
-          <img src="../img/logo.png" alt="" class="logo">
-          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
-        </div>
-        <p class="ads-wp">
-          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
-          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
-        </p>
-        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
+  <!-- build:foot -->
+  <!-- 底部 -->
+  <div class="footer">
+    <div class="footer-ct">
+      <div class="tel-wp">
+        <img src="../img/logo.png" alt="" class="logo">
+        <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
       </div>
+      <p class="ads-wp">
+        <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+        <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+      </p>
+      <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
     </div>
-    <!-- endbuild -->
+  </div>
+  <!-- endbuild -->
+
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
 </body>
