--- a/src/html/28_custom_1.html
+++ b/src/html/28_custom_1.html
@@ -53,7 +53,7 @@
 
   <!-- endbuild -->
 
-  <div class="wrap">
+  <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
