--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -49,6 +49,60 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+              <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
+                <em class="icon-people"></em>
+                <span>学生管理</span>
+              </a>
+              <ul id="studentmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学生管理</li>
+                <li class=" ">
+                  <a href="studentmanagement_list.html" title="学生列表">
+                    <span>学生列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_class.html" title="班级管理">
+                    <span>班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_coin.html" title="学币管理">
+                    <span>学币管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_recharge.html" title="学员充值">
+                    <span>学员充值</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="#exchangemanagement" title="学生兑换管理" data-toggle="collapse">
+                <em class="icon-present"></em>
+                <span>学生兑换管理</span>
+              </a>
+              <ul id="exchangemanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学生兑换管理</li>
+                <li class=" ">
+                  <a href="exchangemanagement_not.html" title="未兑换">
+                    <span>未兑换</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="exchangemanagement_has.html" title="已兑换">
+                    <span>已兑换</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="mall.html" title="奖励商城">
+                <em class="icon-basket"></em>
+                <span>奖励商城</span>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
