--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -17,8 +17,6 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
-
-
 </head>
 
 <body>
@@ -64,6 +62,8 @@
 
 
 
+
+
     <!-- build:sidebar -->
     <!-- 左侧菜单 -->
     <aside class="aside">
@@ -80,7 +80,7 @@
               </a>
               <ul id="studyreport" class="nav sidebar-subnav collapse">
                 <li class="sidebar-subnav-header">学习报告</li>
-                <li class="active">
+                <li class=" ">
                   <a href="studyreport_overall.html" title="总体报告">
                     <span>总体报告</span>
                   </a>
@@ -116,11 +116,67 @@
                 </li>
               </ul>
             </li>
+            <li class=" ">
+              <a href="#studentmanagement" title="学生管理" data-toggle="collapse">
+                <em class="icon-people"></em>
+                <span>学生管理</span>
+              </a>
+              <ul id="studentmanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学生管理</li>
+                <li class=" ">
+                  <a href="studentmanagement_list.html" title="学生列表">
+                    <span>学生列表</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_class.html" title="班级管理">
+                    <span>班级管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_coin.html" title="学币管理">
+                    <span>学币管理</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="studentmanagement_recharge.html" title="学员充值">
+                    <span>学员充值</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="#exchangemanagement" title="学生兑换管理" data-toggle="collapse">
+                <em class="icon-present"></em>
+                <span>学生兑换管理</span>
+              </a>
+              <ul id="exchangemanagement" class="nav sidebar-subnav collapse">
+                <li class="sidebar-subnav-header">学生兑换管理</li>
+                <li class=" ">
+                  <a href="exchangemanagement_not.html" title="未兑换">
+                    <span>未兑换</span>
+                  </a>
+                </li>
+                <li class=" ">
+                  <a href="exchangemanagement_has.html" title="已兑换">
+                    <span>已兑换</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class=" ">
+              <a href="mall.html" title="奖励商城">
+                <em class="icon-basket"></em>
+                <span>奖励商城</span>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
     </aside>
     <!-- endbuild -->
+
+
 
 
 
@@ -302,6 +358,8 @@
 
 
 
+
+
   </div>
 
   <!-- build:js -->
@@ -315,6 +373,8 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
 
 
