--- a/src/html/31_posttest.html
+++ b/src/html/31_posttest.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="body-wordfail">
+<body class="body-wordfail posttest-body">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -123,6 +123,9 @@
     <div class="fixedfoot-ct clearfix">
       <a href="javascript:;" class="submit-btn">提交试卷</a>
       <a href="javascript:;" class="returnback">返回</a>
+      <span class="cutdown">01:28</span>
+      <span class="cutdown-txt">倒计时</span>
+      <i class="cutdown-icon"></i>
     </div>
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
